# tictactoe

./: .gitignore  CMakeLists.txt  bot.c  client.c  client.h  main.c  message.c  message.h  message_example.c  server.c  server.h
examples/: bot.c  client_example.c  message.c  tcp_server_with_select.c
